# DockerFile-Templates

./: Dockerfile  commands.txt  pyproject.toml
Connect-Multiple-Docker/: Dockerfile  docker-compose.yaml
Connect-Multiple-Docker/LibraDWG-QGIS-Container-Combine/libradwg/: Dockerfile
Connect-Multiple-Docker/LibraDWG-QGIS-Container-Combine/qgis/: Dockerfile  command.txt
Poerty-Container/: app.py  command.rtf  docker-compose.yaml  pyproject.toml  untitled.txt
Poerty-Container/new_proj/: pyproject.toml
new_proj/tests/: test_new_proj.py
